// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-copy-to-clipboard> Component basic usage with attributes 1`] = `
<bolt-copy-to-clipboard data-attr="some attribute">
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom transition text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition text
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger component 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <bolt-icon name="add-open"
                 size="medium"
                 background="circle"
      >
        <span class="c-bolt-icon c-bolt-icon--add-open c-bolt-icon--medium  has-background has-circle-background">
          <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
               xmlns="http://www.w3.org/2000/svg"
               viewbox="0 0 24 24"
          >
            <g fill="none"
               fill-rule="evenodd"
            >
              <path>
              </path>
              <g fill="var(--bolt-theme-icon, currentColor)">
                <path d="M12 21a9 9 0 110-18 9 9 0 010 18m0-20a11 11 0 100 22 11 11 0 000-22M16 11h-3V8c0-.5-.4-1-1-1a1 1 0 00-1 1v3H8a1 1 0 00-1 1c0 .6.5 1 1 1h3v3c0 .6.4 1 1 1s1-.4 1-1v-3h3c.6 0 1-.4 1-1s-.4-1-1-1">
                </path>
              </g>
            </g>
          </svg>
          <span class="c-bolt-icon__background-shape c-bolt-icon__background-shape--circle">
          </span>
        </span>
      </bolt-icon>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          This is custom trigger text
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component custom trigger, transition, and confirmation text 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#custom-transition"
    >
      Custom trigger
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      Custom transition
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      Custom confirmation
    </span>
  </span>
</bolt-copy-to-clipboard>
`;

exports[`<bolt-copy-to-clipboard> Component multiple instances 1`] = `
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-1"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #1
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
<bolt-copy-to-clipboard>
  <span class="c-bolt-copy-to-clipboard js-bolt-copy-to-clipboard">
    <button class="c-bolt-copy-to-clipboard__trigger"
            data-clipboard-text="https://boltdesignsystem.com/#link-2"
    >
      <div class="c-bolt-copy-to-clipboard__action">
        <bolt-icon name="asset-link"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--asset-link c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M22.7 3.2l-1.9-2a4 4 0 00-3-1.2c-1.2 0-2.2.4-3 1.2l-2 2c-.3.3-.5.6-.5 1l.4.8c.5.5 1.3.5 1.8 0l2-2c.4-.4.8-.5 1.3-.5s1 .1 1.3.5l2 2c.3.3.5.7.5 1.2s-.2 1-.5 1.3L14.5 14c-.3.4-.8.6-1.4.6-.6 0-1 0-1.3-.4l-.8-.8-.7-.7c-.3-.3-.6-.4-1-.4a1 1 0 00-.7.4c-.3.2-.5.5-.5.8 0 .3.2.6.5 1l1.4 1.4v.3h.4a4 4 0 002.7.8c1 0 1.8-.3 2.5-.8v.1l.4-.3.1-.2 6.7-6.6c.8-.8 1.2-1.8 1.2-3a4 4 0 00-1.3-3M11.3 18.9c.3.3.4.6.4 1 0 .2-.1.5-.4.8l-2 2a4 4 0 01-3 1.3c-1.2 0-2.2-.4-3-1.2l-2-2a4.2 4.2 0 01-1.3-3 4 4 0 011.2-3L8 8a4 4 0 013-1.3A4 4 0 0114 8l1.5 1.5c.3.3.4.6.4.9 0 .3-.1.6-.4.9-.5.4-1.3.4-1.7 0l-1.6-1.6c-.7-.7-1.8-.7-2.5 0L3 16.5c-.3.3-.5.7-.5 1.2s.2 1 .5 1.3L5 21c.7.7 1.8.7 2.5 0l2-2c.2-.2.5-.4 1-.4l.8.3"
                      mask="url(#mask-2)"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        <span class="c-bolt-copy-to-clipboard__action-text">
          Copy Link #2
        </span>
      </div>
    </button>
    <span class="c-bolt-copy-to-clipboard__transition">
      <span class="c-bolt-copy-to-clipboard__transition-animation">
        <bolt-icon name="refresh"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--refresh c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <g fill="var(--bolt-theme-icon, currentColor)"
                   fill-rule="nonzero"
                >
                  <path d="M24 4.5c0-.5-.4-1-1-1a1 1 0 00-1 1v3.7l-3-2.8a10 10 0 00-12.8-1 10 10 0 00-3.6 4.8 1 1 0 001.9.6 8 8 0 0113.2-3l2.8 2.7H17a1 1 0 00-1 1c0 .5.4 1 1 1H23.4l.3-.3.2-.4.1-.2V4.4zM20.8 14.6a1 1 0 00-1.3.6 8 8 0 01-13.1 3l-2.9-2.7H7c.6 0 1-.4 1-1s-.4-1-1-1H1a1 1 0 00-.4 0v.1l-.3.2-.2.3v6.3c0 .6.4 1 1 1 .5 0 1-.4 1-1v-3.6L5 19.6a10 10 0 0016.5-3.7c.1-.5-.2-1-.7-1.3z">
                  </path>
                </g>
              </g>
            </svg>
          </span>
        </bolt-icon>
      </span>
    </span>
    <span class="c-bolt-copy-to-clipboard__confirmation">
      <div class="c-bolt-copy-to-clipboard__info js-bolt-copy-to-clipboard__trigger">
        <bolt-icon name="check"
                   size="medium"
        >
          <span class="c-bolt-icon c-bolt-icon--check c-bolt-icon--medium">
            <svg class="c-bolt-icon__icon c-bolt-icon__icon--medium"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 24 24"
            >
              <g fill="none"
                 fill-rule="evenodd"
              >
                <path>
                </path>
                <path fill="var(--bolt-theme-icon, currentColor)"
                      d="M19.3 6.3L9 16.6l-4.3-4.3a1 1 0 00-1.4 0 1 1 0 000 1.4l5 5a1 1 0 001.4 0l11-11c.4-.4.4-1 0-1.4a1 1 0 00-1.4 0z"
                >
                </path>
              </g>
            </svg>
          </span>
        </bolt-icon>
        Copied!
      </div>
    </span>
  </span>
</bolt-copy-to-clipboard>
`;
